<resources>
    <string name="app_name">CenittApp</string>
    <string name="Registro">Registro Usuario</string>
    <string name="OpcionTarifa">Opcion De Tarifa</string>
    <string name="Iniciar">Iniciar Sesion</string>
    <string name="InfoCliente">Info Del Cliente</string>
    <string name="Tarifa01_dac_02">Tarifa 01,Dac,02</string>
    <string name="TarifaHm">Tarifa HM</string>
    <string name="TarifaOm">Tarifa OM</string>
    <string name="Tarifa03">Tarifa 03</string>
    <string name="login">Accesar</string>
    <string name="title_activity_super_principal">SuperPrincipal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="ulises">Ulises Garcia</string>
    <string name="puesto_ulises">Director y Cofundador</string>
    <string name="vendedores">Vendedores</string>
    <string name="tecnicos">Tecnicos</string>
    <string name="salir">Salir</string>
    <string name="title_activity_tecnico">TecnicoActivity</string>
    <string name="datosCliente">Datos Cliente</string>
    <string name="datosEmpleado">Datos Empleado</string>
    <string name="datosRequerimientos">Requerimientos</string>
    <string name="datosMateriales">Materiales</string>
    <string name="datosCotizacion">Cotizacion</string>

</resources>
