<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mx.cenitt.www.cenittapp.presupuesto.PresupuestoActivity">

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/fecha"
        android:layout_height="wrap_content"
        android:background="@color/headerNavBarCenter"
        android:padding="5dp"
        android:textAlignment="textEnd"
        android:text="12/12/12"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/headerNavBarEnd"
                android:padding="10dp"
                android:text="@string/datosCliente"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nombre : "
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="nombre completo"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Empresa : "
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textEmpresa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="nombre de la empresa"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/headerNavBarEnd"
                android:padding="10dp"
                android:text="@string/datosEmpleado"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nombre : "
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textNombreE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="nombre completo"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cargo : "
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textCargoE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Cargo del empleado"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/headerNavBarEnd"
                android:padding="10dp"
                android:text="@string/datosRequerimientos"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Ancho : "
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textAncho"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Dancho"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Largo : "
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textLargo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Dlargo"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Kwh : "
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textKWH"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="data KWH"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgRecibo1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:src="@drawable/logo" />

                <ImageView
                    android:id="@+id/imgRecibo2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:src="@drawable/logo" />

            </LinearLayout>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/headerNavBarEnd"
                android:padding="10dp"
                android:text="@string/datosMateriales"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Producto  "
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="whatts  "
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="Cant"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textNamePanel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="panel x  "
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textWatsPanel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="whatts  "
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textCatnPanel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="Cant"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textNameInversor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Inversor x  "
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textWatsInversor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="whatts  "
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textCatnInversor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="Cant"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/headerNavBarEnd"
                android:padding="10dp"
                android:text="@string/datosCotizacion"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textPresio"
                    android:textAlignment="textEnd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="$2000"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>


    </ScrollView>
</LinearLayout>
