<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mx.cenitt.www.cenittapp.presupuesto.NuevoPresupuestoActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/headerNavBarEnd"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="10dp"
                    android:text="Cliente"
                    android:textColor="@android:color/white"
                    android:textSize="22sp"
                    android:textStyle="bold|italic" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                </Spinner>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/SeccionCliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nombre : "
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="nombre completo"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Empresa : "
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textEmpresa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="nombre de la empresa"
                    android:textSize="18sp" />
            </LinearLayout>


           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@color/headerNavBarEnd"
               android:orientation="horizontal">
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:padding="10dp"
                   android:text="@string/datosRequerimientos"
                   android:textColor="@android:color/white"
                   android:textSize="22sp"
                   android:textStyle="bold|italic"
                   android:layout_weight="1"
                   />

               <ImageView
                   android:id="@+id/MapLatLon"
                   android:layout_width="wrap_content"
                   android:layout_height="match_parent"
                   android:layout_marginRight="10dp"
                   android:src="@android:drawable/ic_dialog_map"/>

           </LinearLayout>

            <LinearLayout
                android:id="@+id/seccionUbicacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Latitude : "
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/TVlat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Latitude"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Longitud : "
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/TVlon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="longitud"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Ancho : "
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/EDTAncho"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Dancho"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Largo : "
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/EDTLargo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Dlargo"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Kwh necesarios : "
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/textKWH"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:textSize="18sp" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/RVKWH"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </android.support.v7.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:background="@color/promedio"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Promedio KWH : "
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/TVPromedioKWH"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewEnd"
                    android:text="promedio"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgRecibo1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:src="@android:drawable/ic_menu_camera" />

                <ImageView
                    android:id="@+id/imgRecibo2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:src="@android:drawable/ic_menu_camera" />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/headerNavBarEnd"
                android:padding="10dp"
                android:text="@string/datosMateriales"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Producto  "
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="whatts  "
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="Cant"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textNamePanel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="panel x  "
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textWatsPanel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="whatts  "
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textCatnPanel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="Cant"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textNameInversor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Inversor x  "
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textWatsInversor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="whatts  "
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textCatnInversor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="Cant"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/headerNavBarEnd"
                android:padding="10dp"
                android:text="@string/datosCotizacion"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textPresio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="$2000"
                    android:textAlignment="textEnd"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>


    </ScrollView>
</LinearLayout>
